--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/rest-controller/FoodController.js",
-    "test": "npm test"
+    "build": "webpack --config=Scripts/config/webpack.prod.js",
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,10 @@
   },
   "homepage": "https://github.com/srujangowda14/FidZuluBackend#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/jasmine": "^5.1.0",
+    "express": "^4.18.2",
+    "jasmine": "^5.1.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "supertest": "^6.3.3"
   }
 }
