--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "@types/jasmine": "^5.1.0",
     "express": "^4.18.2",
-    "jasmine": "^5.1.0",
     "jasmine-spec-reporter": "^7.0.0",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "jasmine": "^5.1.0"
   }
 }
