--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/srujangowda14/FidZuluBackend#readme",
   "dependencies": {
     "@types/jasmine": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jasmine-spec-reporter": "^7.0.0",
     "supertest": "^6.3.3"
